# yew-wasm-pack-minimal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bootstrap.js  index.html  main.js  package.json  webpack.config.js
src/: app.rs  lib.rs
static/: index.html  style.scss
